--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python-dotenv = "^0.15.0"
 django-bootstrap4 = "^2.3.1"
 python-telegram-bot = "^13.3"
 rollbar = "^0.15.2"
+django-anymail = {extras = ["mailgun"], version = "^8.2"}
 
 [tool.poetry.dev-dependencies]
 
