--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ django-bootstrap4 = "^2.3.1"
 python-telegram-bot = "^13.3"
 rollbar = "^0.15.2"
 django-anymail = {extras = ["mailgun"], version = "^8.2"}
+whitenoise = "^5.2.0"
 
 [tool.poetry.dev-dependencies]
 
