--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,11 @@ gunicorn = "^20.0.4"
 psycopg2 = "^2.8.6"
 python-dotenv = "^0.15.0"
 django-bootstrap4 = "^2.3.1"
-python-telegram-bot = "^13.3"
+python-telegram-bot = "^13.4.1"
 rollbar = "^0.15.2"
 django-anymail = {extras = ["mailgun"], version = "^8.2"}
 whitenoise = "^5.2.0"
+django-debug-toolbar = "^3.2"
 
 [tool.poetry.dev-dependencies]
 
