--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ rollbar = "^0.15.2"
 django-anymail = {extras = ["mailgun"], version = "^8.2"}
 whitenoise = "^5.2.0"
 django-debug-toolbar = "^3.2"
+Pillow = "^8.1.2"
 
 [tool.poetry.dev-dependencies]
 
