--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ django-anymail = {extras = ["mailgun"], version = "^8.2"}
 whitenoise = "^5.2.0"
 django-debug-toolbar = "^3.2"
 Pillow = "^8.1.2"
+django-filter = "^2.4.0"
 
 [tool.poetry.dev-dependencies]
 
