--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ whitenoise = "^5.2.0"
 django-debug-toolbar = "^3.2"
 Pillow = "^8.1.2"
 django-filter = "^2.4.0"
+Faker = "^6.6.3"
 
 [tool.poetry.dev-dependencies]
 
