--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Default ignored files
-media
+media/
 /shelf/
 /workspace.xml
 
@@ -142,3 +142,5 @@ dmypy.json
 cython_debug/
 
 .idea
+
+node_modules
