infrastructure: add "django-summernote" into project

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ Pillow = "^8.1.2"
 django-filter = "^2.4.0"
 Faker = "^6.6.3"
 PyJWT = "^2.0.1"
+django-summernote = "^0.8.11"
 
 [tool.poetry.dev-dependencies]
 
