feature(test_data): add user with data generator

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ django-filter = "^2.4.0"
 Faker = "^6.6.3"
 PyJWT = "^2.0.1"
 django-summernote = "^0.8.11"
+pytest = "^6.2.3"
 
 [tool.poetry.dev-dependencies]
 
