--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ django-summernote = "^0.8.11"
 django-redis = "^4.12.1"
 django-swagger-render = "^0.1.1"
 pytest = "^6.2.3"
+channels = "^3.0.3"
+channels-redis = "^3.2.0"
 
 [tool.poetry.dev-dependencies]
 
