--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ django-summernote = "^0.8.11"
 django-redis = "^4.12.1"
 django-swagger-render = "^0.1.1"
 pytest = "^6.2.3"
+celery = "^5.0.5"
 
 [tool.poetry.dev-dependencies]
 
