--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ django-redis = "^4.12.1"
 django-swagger-render = "^0.1.1"
 pytest = "^6.2.3"
 celery = "^5.0.5"
+boto3 = "^1.17.89"
+django-storages = "^1.11.1"
 
 [tool.poetry.dev-dependencies]
 
